1.8
 * Added custom tracert and whois support
 * Added geoip lookup for country name and image

1.7
 * Added option to specify ping buffer length
 * Removed legacy code

1.6
 * Added PathPing support

1.5
 * Improved ping graph scaling
 
1.4
 * Fixed whois scrolling issue
 * Fixed ping threading issues
 * Fixed various memory leaks

1.3
 * Added plugin options for ping/tracert/whois
 * Added native ping/tracert/whois support
 * Updated UI

1.2
 * Fixed encoding bug

1.1
 * Fixed handle leak

1.0
 * Initial release